--- a/index.html
+++ b/index.html
@@ -78,23 +78,21 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="try">
-      <div class="row">
-        <div class="col-lg-4">
-          <i class="fas fa-check-circle fa-4x icons"></i>
-          <h3 class="text-content">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
-        </div>
-        <div class="col-lg-4">
-          <i class="fas fa-bullseye fa-4x icons"></i>
-          <h3 class="text-content">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="col-lg-4">
-          <i class="fas fa-heart fa-4x icons"></i>
-          <h3 class="text-content">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
-        </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <i class="fas fa-check-circle fa-4x icons"></i>
+        <h3 class="text-content">Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="col-lg-4">
+        <i class="fas fa-bullseye fa-4x icons"></i>
+        <h3 class="text-content">Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-lg-4">
+        <i class="fas fa-heart fa-4x icons"></i>
+        <h3 class="text-content">Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
   </section> <!-- Testimonials -->
@@ -199,9 +197,10 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg cta-button"> <i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg cta-button"> <i class="fab fa-google-play"></i>
+      Download</button>
 
   </section>
 
@@ -210,7 +209,15 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <div class="card text-center">
+      <div class="card-footer text-muted footer-icon">
+        <i class="fab fa-twitter footer-icon"></i>
+        <i class="fab fa-facebook-f footer-icon"></i>
+        <i class="fab fa-instagram footer-icon"></i>
+        <i class="fas fa-envelope footer-icon"></i>
+        <p>© Copyright 2018 TinDog</p>
+      </div>
+    </div>
 
   </footer>
 
